[package]
name = "bcc_rust_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }

actix-web = "4"
serde_json = "1.0"
log="0.4"
